SOURCES/patches/0039-fixup-Add-topology_cluster_id-cpu-definition-f.next-hybrid
From 2b05d3a874455610b09362313efdfb1312833cbf Mon Sep 17 00:00:00 2001
From: Tim Chen <tim.c.chen@linux.intel.com>
Date: Mon, 19 Apr 2021 15:06:25 -0700
Subject: [PATCH 39/76] fixup: Add topology_cluster_id(cpu) definition for x86
MIME-Version: 1.0
Content-Type: text/plain; charset=UTF-8
Content-Transfer-Encoding: 8bit

[Ricardo: When CONFIG_SMP=n, the build break below is observed:

/arch/x86/include/asm/topology.h:114:44: error: ‘cpu_l2c_id’ undeclared
(first use in this function); did you mean ‘cpu_in_idle’?
 #define topology_cluster_id(cpu)  (per_cpu(cpu_l2c_id, cpu))
                                            ^

I fixed this build break by wrapping x86 definition of
topology_cluster_id() in CONFIG_SMP. When !CONFIG_SMP, such definition
is not needed.]
---
 arch/x86/include/asm/topology.h | 1 +
 1 file changed, 1 insertion(+)

diff --git a/arch/x86/include/asm/topology.h b/arch/x86/include/asm/topology.h
index 8f9755484085..bc7a426d35e4 100644
--- a/arch/x86/include/asm/topology.h
+++ b/arch/x86/include/asm/topology.h
@@ -120,6 +120,7 @@ extern unsigned int __max_die_per_package;
 #define topology_cluster_cpumask(cpu)		(cpu_clustergroup_mask(cpu))
 #define topology_core_cpumask(cpu)		(per_cpu(cpu_core_map, cpu))
 #define topology_sibling_cpumask(cpu)		(per_cpu(cpu_sibling_map, cpu))
+#define topology_cluster_id(cpu)		(per_cpu(cpu_l2c_id, cpu))
 
 extern unsigned int __max_logical_packages;
 #define topology_max_packages()			(__max_logical_packages)
-- 
2.27.0

